Add OutOfMemory generating app